--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <import type="android.view.View" />
+
         <variable
             name="viewModel"
             type="com.mongmong.namo.presentation.ui.auth.RegisterViewModel" />
@@ -17,11 +20,13 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/register_require_tv">
+            app:layout_constraintBottom_toTopOf="@id/register_require_tv"
+            app:layout_constraintTop_toTopOf="parent">
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <TextView
                     android:id="@+id/register_title_tv"
                     style="@style/content_regular"
@@ -30,7 +35,7 @@
                     android:layout_marginTop="40dp"
                     android:gravity="center"
                     android:text="@string/register_title"
-                    android:textSize="24sp"
+                    android:textSize="20sp"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
@@ -39,11 +44,12 @@
                     android:layout_height="120dp"
                     android:layout_marginTop="40dp"
                     android:background="@drawable/bg_register_profile_border"
-                    android:padding="46dp"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/ic_gallery"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/register_title_tv" />
+                    app:layout_constraintTop_toBottomOf="@+id/register_title_tv"
+                    app:registerImage="@{viewModel.profileImage}" />
 
                 <TextView
                     android:id="@+id/register_nickname_title_tv"
@@ -63,6 +69,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="39dp"
                     android:layout_marginEnd="30dp"
+                    android:backgroundTint="@{viewModel.nickname.isEmpty() ? @color/text_placeholder : @color/black}"
                     android:hint="@string/register_nickname_hint"
                     android:text="@={viewModel.nickname}"
                     android:textColorHint="@color/text_placeholder"
@@ -72,18 +79,28 @@
                     app:layout_constraintStart_toEndOf="@id/register_nickname_title_tv"
                     app:layout_constraintTop_toTopOf="@id/register_nickname_title_tv" />
 
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/register_nickname_check"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:src="@drawable/ic_register_check"
+                    android:visibility="@{viewModel.isNicknameValid ? View.VISIBLE : View.GONE}"
+                    app:civ_circle_background_color="@color/main"
+                    app:layout_constraintBottom_toBottomOf="@+id/register_nickname_content_et"
+                    app:layout_constraintEnd_toEndOf="@id/register_nickname_content_et"
+                    app:layout_constraintTop_toTopOf="@+id/register_nickname_content_et" />
+
                 <TextView
                     android:id="@+id/register_nickname_rule_tv"
                     style="@style/content_regular"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/text_disable"
-                    android:text="@string/register_nickname_rule"
                     android:lineHeight="24sp"
+                    android:text="@string/register_nickname_rule"
+                    android:textColor="@color/text_disable"
                     app:layout_constraintEnd_toEndOf="@+id/register_nickname_content_et"
                     app:layout_constraintStart_toStartOf="@+id/register_nickname_content_et"
                     app:layout_constraintTop_toBottomOf="@id/register_nickname_content_et" />
-
 
                 <TextView
                     android:id="@+id/register_name_title_tv"
@@ -118,26 +135,25 @@
                     app:layout_constraintTop_toBottomOf="@+id/register_name_title_tv" />
 
                 <LinearLayout
-                    android:id="@+id/register_birth_content_ll"
+                    android:id="@+id/register_birth_container_ll"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     app:layout_constraintBottom_toBottomOf="@+id/register_birth_title_tv"
-                    app:layout_constraintEnd_toEndOf="@id/register_nickname_content_et"
+                    app:layout_constraintEnd_toEndOf="@+id/register_nickname_content_et"
                     app:layout_constraintStart_toStartOf="@+id/register_name_content_tv"
                     app:layout_constraintTop_toTopOf="@id/register_birth_title_tv">
 
-                    <EditText
-                        android:id="@+id/register_birth_year_et"
+                    <TextView
+                        android:id="@+id/register_birth_year_tv"
                         style="@style/content_regular"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1.5"
-                        android:inputType="number"
-                        android:maxLength="4"
-                        android:maxLines="1"
-                        android:hint="@string/register_birth_year"
-                        android:text="@={viewModel.year}"
+                        android:paddingBottom="4dp"
+                        android:background="@{viewModel.birthDate.isEmpty() ? @drawable/bg_underline_empty : @drawable/bg_underline}"
+                        android:text='@{viewModel.birthDate.isEmpty() ? @string/register_birth_year : viewModel.getBirthYear}'
+                        android:textColor="@{viewModel.birthDate.isEmpty() ? @color/text_placeholder : @color/black}"
                         android:textColorHint="@color/text_placeholder"
                         android:textSize="15sp" />
 
@@ -149,17 +165,16 @@
                         android:text="@string/register_birth_divider"
                         android:textColor="@color/text_placeholder" />
 
-                    <EditText
-                        android:id="@+id/register_birth_month_et"
+                    <TextView
+                        android:id="@+id/register_birth_month_tv"
                         style="@style/content_regular"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:inputType="number"
-                        android:maxLines="1"
-                        android:hint="@string/register_birth_month"
-                        android:text="@={viewModel.month}"
-                        android:textColorHint="@color/text_placeholder"
+                        android:paddingBottom="4dp"
+                        android:background="@{viewModel.birthDate.isEmpty() ? @drawable/bg_underline_empty : @drawable/bg_underline}"
+                        android:text='@{viewModel.birthDate.isEmpty() ? @string/register_birth_month : viewModel.getBirthMonth}'
+                        android:textColor="@{viewModel.birthDate.isEmpty() ? @color/text_placeholder : @color/black}"
                         android:textSize="15sp" />
 
                     <TextView
@@ -171,60 +186,70 @@
                         android:text="@string/register_birth_divider"
                         android:textColor="@color/text_placeholder" />
 
-                    <EditText
-                        android:id="@+id/register_birth_day_et"
+                    <TextView
+                        android:id="@+id/register_birth_day_tv"
                         style="@style/content_regular"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:inputType="number"
-                        android:maxLength="2"
-                        android:maxLines="1"
-                        android:hint="@string/register_birth_day"
-                        android:text="@={viewModel.day}"
-                        android:textColorHint="@color/text_placeholder"
+                        android:paddingBottom="4dp"
+                        android:background="@{viewModel.birthDate.isEmpty() ? @drawable/bg_underline_empty : @drawable/bg_underline}"
+                        android:text='@{viewModel.birthDate.isEmpty() ? @string/register_birth_day : viewModel.getBirthDay}'
+                        android:textColor="@{viewModel.birthDate.isEmpty() ? @color/text_placeholder : @color/black}"
                         android:textSize="15sp" />
                 </LinearLayout>
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/register_birth_check"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:src="@drawable/ic_register_check"
+                    android:visibility="@{viewModel.isBirthValid ? View.VISIBLE : View.GONE}"
+                    app:civ_circle_background_color="@color/main"
+                    app:layout_constraintBottom_toBottomOf="@+id/register_birth_container_ll"
+                    app:layout_constraintEnd_toEndOf="@id/register_birth_container_ll"
+                    app:layout_constraintTop_toTopOf="@+id/register_birth_container_ll" />
 
                 <TextView
                     android:id="@+id/register_color_title_tv"
                     style="@style/content_bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/register_color_title"
                     android:layout_marginTop="32dp"
+                    android:text="@string/register_color_title"
                     app:layout_constraintStart_toStartOf="@+id/register_nickname_title_tv"
                     app:layout_constraintTop_toBottomOf="@+id/register_birth_title_tv" />
 
                 <LinearLayout
+                    android:id="@+id/register_color_select_ll"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toBottomOf="@+id/register_color_title_tv"
                     app:layout_constraintEnd_toEndOf="@+id/register_nickname_content_et"
                     app:layout_constraintTop_toTopOf="@+id/register_color_title_tv">
+
                     <TextView
                         android:id="@+id/register_color_select_tv"
                         style="@style/content_regular"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/register_color_select"
-                        android:layout_marginEnd="8dp" />
+                        android:layout_marginEnd="8dp"
+                        android:text="@string/register_color_select" />
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/register_color_select_iv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_category_add"/>
+                        android:src="@drawable/ic_category_add" />
                 </LinearLayout>
-
 
                 <TextView
                     android:id="@+id/register_intro_title_tv"
                     style="@style/content_bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/register_intro_title"
                     android:layout_marginTop="32dp"
+                    android:text="@string/register_intro_title"
                     app:layout_constraintStart_toStartOf="@+id/register_nickname_title_tv"
                     app:layout_constraintTop_toBottomOf="@+id/register_color_title_tv" />
 
@@ -233,11 +258,11 @@
                     style="@style/calendar_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="12"
+                    android:text="@{String.valueOf(viewModel.introLength)}"
                     android:textColor="@color/text_unselected"
+                    app:layout_constraintBottom_toBottomOf="@id/register_intro_cnt_max_tv"
                     app:layout_constraintEnd_toStartOf="@id/register_intro_cnt_max_tv"
-                    app:layout_constraintTop_toTopOf="@id/register_intro_cnt_max_tv"
-                    app:layout_constraintBottom_toBottomOf="@id/register_intro_cnt_max_tv"/>
+                    app:layout_constraintTop_toTopOf="@id/register_intro_cnt_max_tv" />
 
                 <TextView
                     android:id="@+id/register_intro_cnt_max_tv"
@@ -254,29 +279,33 @@
                     style="@style/content_regular"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:hint="@string/register_intro_hint"
-                    android:textColorHint="@color/text_placeholder"
-                    android:textSize="15sp"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="40dp"
+                    android:backgroundTint='@{viewModel.intro.isEmpty() ? @color/text_placeholder : @color/black}'
+                    android:text="@={viewModel.intro}"
+                    android:hint="@string/register_intro_hint"
                     android:maxLength="50"
+                    android:textColorHint="@color/text_placeholder"
+                    android:textSize="15sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/register_nickname_content_et"
                     app:layout_constraintStart_toStartOf="@+id/register_nickname_title_tv"
-                    app:layout_constraintTop_toBottomOf="@+id/register_intro_title_tv"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintTop_toBottomOf="@+id/register_intro_title_tv" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
 
         <TextView
             android:id="@+id/register_require_tv"
             style="@style/subtext_14"
-            android:text="@string/register_required"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:paddingTop="8dp"
-            app:layout_constraintStart_toStartOf="@id/register_save_btn"
+            android:text="@string/register_required"
+            app:layout_constraintBottom_toTopOf="@id/register_save_btn"
             app:layout_constraintEnd_toEndOf="@id/register_save_btn"
-            app:layout_constraintBottom_toTopOf="@id/register_save_btn"/>
+            app:layout_constraintStart_toStartOf="@id/register_save_btn" />
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/register_save_btn"
             style="@style/content_bold"
@@ -284,8 +313,8 @@
             android:layout_height="55dp"
             android:layout_marginHorizontal="25dp"
             android:layout_marginBottom="40dp"
-            android:background=""
-            android:enabled="@{}"
+            android:background="@drawable/bg_basic_btn"
+            android:backgroundTint="@{viewModel.isRegisterEnabled ? @color/main : @color/text_unselected}"
             android:text="@string/okay"
             android:textAlignment="center"
             android:textColor="@color/white"
